--- a/Ocr_Worker/Ocr_Worker.csproj
+++ b/Ocr_Worker/Ocr_Worker.csproj
@@ -15,7 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
       <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.2.0" />
+      <PackageReference Include="NEST" Version="7.17.5" />
       <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
       <PackageReference Include="Tesseract" Version="5.2.0" />
     </ItemGroup>
